--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -15,6 +15,61 @@
     "type": "text",
     "placeholders": {}
   },
+  "loginWithGoogle": "Sign in with Google",
+  "@loginWithGoogle": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "login": "Sign in",
+  "@login": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "loginLoading": "Logging in...",
+  "@loginLoading": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "loginFailure": "Login failure",
+  "@loginFailure": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "register": "Create an account",
+  "@register": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "registerLoading": "Registering...",
+  "@registerLoading": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "registerFailure": "Registration Failure",
+  "@registerFailure": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "emailFieldLabel": "Email",
+  "@emailFieldLabel": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "emailFieldError": "Invalid email",
+  "@emailFieldError": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "passwordFieldLabel": "Password",
+  "@passwordFieldLabel": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "passwordFieldError": "Invalid password",
+  "@passwordFieldError": {
+    "type": "text",
+    "placeholders": {}
+  },
   "showAll": "Show all",
   "@showAll": {
     "type": "text",
